log-schemas/27.5/opcua_binary_event_filter_attribute_operand.rst
``opcua_binary_event_filter_attribute_operand`` field reference
---------------------------------------------------------------

.. list-table::
   :header-rows: 1
   :class: longtable
   :widths: 1 3

   * - Field (Type)
     - Description

   * - ``ts`` (time)
     - The ts information.

   * - ``uid`` (string)
     - The uid information.

   * - ``id.orig_h`` (string - addr)
     - The originator's IP address.

   * - ``id.orig_p`` (integer - port)
     - The originator's port number.

   * - ``id.resp_h`` (string - addr)
     - The responder's IP address.

   * - ``id.resp_p`` (integer - port)
     - The responder's port number.

   * - ``content_filter_filter_operand_link_id`` (string)
     - The content_filter_filter_operand_link_id information.

   * - ``node_id_encoding_mask`` (string)
     - The node_id_encoding_mask information.

   * - ``node_id_namespace_idx`` (integer - count)
     - The node_id_namespace_idx information.

   * - ``node_id_numeric`` (integer - count)
     - The node_id_numeric information.

   * - ``node_id_string`` (string)
     - The node_id_string information.

   * - ``node_id_guid`` (string)
     - The node_id_guid information.

   * - ``node_id_opaque`` (string)
     - The node_id_opaque information.

   * - ``alias`` (string)
     - The alias information.

   * - ``browse_path_element_link_id`` (string)
     - The browse_path_element_link_id information.

   * - ``attribute`` (string)
     - The attribute information.

   * - ``index_range`` (string)
     - The index_range information.
